--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 device_query = "1.1.3"
+window-vibrancy = "0.3.2"
+tauri-plugin-positioner = "1.0.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
