--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 device_query = "1.1.3"
 window-vibrancy = "0.3.2"
 tauri-plugin-positioner = "1.0.4"
+tokio = { version = "1.28.1", features = ["time"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
